# my_openai

./: .env.example  .gitignore  README.md  environment.yml  pyproject.toml
src/: run_hunyuan.py  run_structured_outputs.py
src/my_openai/: __init__.py  tools.py
